--- a/templates/result.html
+++ b/templates/result.html
@@ -3,15 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Download Your Processed Audio</title>
-    <link rel="stylesheet" href="{{ url_for('static', filename='css/style.css') }}">
+    <title>Processed File</title>
 </head>
 <body>
-    <div class="container">
-        <h1>Your audio has been processed!</h1>
-        <a href="{{ url_for('download', filename=filename) }}">
-            <button>Download</button>
-        </a>
-    </div>
+    <h1>File Processed: {{ filename }}</h1>
+    <a href="/download/{{ filename }}">Download Processed File</a>
 </body>
 </html>
