--- a/templates/upload.html
+++ b/templates/upload.html
@@ -3,16 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Upload Audio</title>
-    <link rel="stylesheet" href="{{ url_for('static', filename='css/style.css') }}">
+    <title>Upload File</title>
 </head>
 <body>
-    <div class="container">
-        <h1>Upload your audio file</h1>
-        <form action="{{ url_for('upload') }}" method="POST" enctype="multipart/form-data">
-            <input type="file" name="file" accept=".mp3,.wav" required>
-            <button type="submit">Upload</button>
-        </form>
-    </div>
+    <h1>Upload your file</h1>
+    <form action="/upload" method="post" enctype="multipart/form-data">
+        <input type="file" name="file">
+        <button type="submit">Upload</button>
+    </form>
 </body>
 </html>
